Local binding to the service + Accuracy slider + Filter lis
- Added a local binder to the service implementing the sensor readout.
  We can now set things from the Acticity in the Service itself.
  TODO: move the opening of the file/bufferedwriter from the Service to
  the Activity?
- Added an Interface for step detection. All step detectors should
  implement this interface. It is a preliminary interface, so the API it
  offers may/will change.
- Added a SeekBar to allow changing the accuracy from the UI. Still
  needs some fixoring since the values are counterintuitive. It does
  change the requested accuracy in the listener. Some fugly hacks with a
  global variable were required, which meant synchronisation to be on
  the safe side. Prolly not necessary, but still ...
- Added a drop down list (sort of, it's called a Skinner) to present a
  list of possible filters to the user. Upon selection a new filter is
  instantiated (provided the corresponding class is available in the
  package) and given to the Service for further use.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,9 @@
 <resources>
     <string name="hello">Hello World, StappentellerActivity!</string>
     <string name="app_name">Stappenteller</string>
+    <string name="filter_prompt">Choose a filter</string>
+    <string-array name="filter_array">
+    	<item>No detection</item>
+    	<item>NullStepDetector</item>
+    </string-array>
 </resources>
