Added a broadcast receiver class to the activity.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="hello">Hello World, StappentellerActivity!</string>
     <string name="app_name">Stappenteller</string>
+    <string name="stepDetected">Step Detected</string>
     <string name="filter_prompt">Choose a filter</string>
     <string-array name="filter_array">
     	<item>No detection</item>
