Added code for Detector selection

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="hello">Hello World, StappentellerActivity!</string>
     <string name="app_name">Stappenteller</string>
-    <string name="filter_prompt">Choose a filter</string>
-    <string-array name="filter_array">
+    <string name="detector_prompt">Choose a filter</string>
+    <string-array name="detector_array">
     	<item>No detection</item>
     	<item>NullStepDetector</item>
     </string-array>
