--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="app_name">Stappenteller</string>
     <string name="detector_prompt">Choose a filter</string>
     <string-array name="detector_array">
-    	<item>No detection</item>
-    	<item>NullStepDetector</item>
+    	<item>SimpleThresholdDetector</item>
     </string-array>
 </resources>
